--- a/index.html
+++ b/index.html
@@ -815,6 +815,7 @@
                         const client = google.accounts.oauth2.initTokenClient({
                             client_id: this.clientId,
                             scope: 'https://www.googleapis.com/auth/spreadsheets',
+                            redirect_uri: window.location.origin + window.location.pathname,
                             callback: (response) => {
                                 if (response.error) {
                                     reject(new Error(response.error));
