--- a/index.html
+++ b/index.html
@@ -934,23 +934,23 @@
                     
                     return dataRows.map(row => ({
                         id: row[0] || '',
-                        name: row[1] || '',           // NAME
-                        mobile: row[2] || '',         // MOBILE
-                        email: row[3] || '',          // EMAIL
-                        fu: row[4] || '',             // FU (follow-up days)
-                        qs: row[5] || '',             // QS (Quad Squad)
-                        poc: row[6] || '',            // POC (Point of Contact)
-                        mf: row[7] || '',             // MF (Male/Female)
-                        lot: row[8] || '',            // LOT (Leg of Training)
-                        typ: row[9] || '',            // TYP (Type of School)
-                        loc: row[10] || '',           // LOC (Location)
-                        yr: row[11] || '',            // YR (Year)
-                        notes: row[12] || '',         // NOTES
-                        address: row[13] || '',       // ADDRESS
-                        lastContact: row[14] || null,
-                        interactions: row[15] ? JSON.parse(row[15]) : [],
-                        createdAt: row[16] || new Date().toISOString(),
-                        updatedAt: row[17] || new Date().toISOString()
+                        name: row[0] || '',           // A: NAME
+                        mobile: row[1] || '',         // B: MOBILE
+                        email: row[2] || '',          // C: EMAIL
+                        fu: row[3] || '14',           // D: FU (follow-up days)
+                        qs: row[4] || '',             // E: QS (Quad Squad)
+                        poc: row[5] || '',            // F: POC (Point of Contact)
+                        mf: row[6] || '',             // G: MF (Male/Female)
+                        lot: row[7] || '',            // H: LOT (Leg of Training)
+                        typ: row[8] || '',            // I: TYP (Type of School)
+                        loc: row[9] || '',            // J: LOC (Location)
+                        yr: row[10] || '',            // K: YR (Year)
+                        notes: row[11] || '',         // L: NOTES
+                        address: row[12] || '',       // M: ADDRESS
+                        lastContact: row[13] || null,
+                        interactions: row[14] ? JSON.parse(row[14]) : [],
+                        createdAt: row[15] || new Date().toISOString(),
+                        updatedAt: row[16] || new Date().toISOString()
                     }));
                 } catch (error) {
                     console.error('Error loading mentees from Google Sheets:', error);
@@ -966,19 +966,19 @@
                     // Convert mentees to rows
                     const dataRows = mentees.map(mentee => [
                         mentee.id || '',
-                        mentee.name || '',           // NAME
-                        mentee.mobile || '',         // MOBILE
-                        mentee.email || '',          // EMAIL
-                        mentee.fu || '',             // FU (follow-up days)
-                        mentee.qs || '',             // QS (Quad Squad)
-                        mentee.poc || '',            // POC (Point of Contact)
-                        mentee.mf || '',             // MF (Male/Female)
-                        mentee.lot || '',            // LOT (Leg of Training)
-                        mentee.typ || '',            // TYP (Type of School)
-                        mentee.loc || '',            // LOC (Location)
-                        mentee.yr || '',             // YR (Year)
-                        mentee.notes || '',          // NOTES
-                        mentee.address || '',        // ADDRESS
+                        mentee.name || '',           // A: NAME
+                        mentee.mobile || '',         // B: MOBILE
+                        mentee.email || '',          // C: EMAIL
+                        mentee.fu || '14',           // D: FU (follow-up days)
+                        mentee.qs || '',             // E: QS (Quad Squad)
+                        mentee.poc || '',            // F: POC (Point of Contact)
+                        mentee.mf || '',             // G: MF (Male/Female)
+                        mentee.lot || '',            // H: LOT (Leg of Training)
+                        mentee.typ || '',            // I: TYP (Type of School)
+                        mentee.loc || '',            // J: LOC (Location)
+                        mentee.yr || '',             // K: YR (Year)
+                        mentee.notes || '',          // L: NOTES
+                        mentee.address || '',        // M: ADDRESS
                         mentee.lastContact || '',
                         JSON.stringify(mentee.interactions || []),
                         mentee.createdAt || new Date().toISOString(),
