Fix Add Mentee modal by correcting field IDs

--- a/index.html
+++ b/index.html
@@ -1307,17 +1307,18 @@
 
             showAddMenteeModal() {
                 document.getElementById('menteeName').value = '';
-                document.getElementById('menteeSpecialty').value = '';
-                document.getElementById('menteePhone').value = '';
+                document.getElementById('menteeMobile').value = '';
                 document.getElementById('menteeEmail').value = '';
-                document.getElementById('menteeYear').value = '';
-                document.getElementById('menteeInstitution').value = '';
-                document.getElementById('menteeGender').value = '';
-                document.getElementById('menteeSchool').value = '';
-                document.getElementById('menteeSchoolType').value = '';
-                document.getElementById('menteeSchoolYear').value = '';
+                document.getElementById('menteeFu').value = '14';
+                document.getElementById('menteeQs').value = '';
+                document.getElementById('menteePoc').value = '';
+                document.getElementById('menteeMf').value = '';
+                document.getElementById('menteeLot').value = '';
+                document.getElementById('menteeTyp').value = '';
+                document.getElementById('menteeLoc').value = '';
+                document.getElementById('menteeYr').value = '';
+                document.getElementById('menteeNotes').value = '';
                 document.getElementById('menteeAddress').value = '';
-                document.getElementById('menteeReferredBy').value = '';
                 document.getElementById('addMenteeModal').classList.add('active');
             }
 
