--- a/index.html
+++ b/index.html
@@ -894,7 +894,9 @@
             async getTemplateContent() {
                 try {
                     const url = `https://docs.googleapis.com/v1/documents/${TEMPLATE_DOC_ID}`;
+                    console.log('Fetching template from:', url);
                     const doc = await this.makeAuthenticatedRequest(url);
+                    console.log('Template document received:', doc);
                     
                     // Extract text content from the document
                     let content = '';
@@ -910,6 +912,7 @@
                         }
                     }
                     
+                    console.log('Extracted template content:', content);
                     return content.trim();
                 } catch (error) {
                     console.error('Error fetching template:', error);
